re PR fortran/55352 (Erroneous gfortran warning of unused module variable when variable is only used in namelist)

2012-11-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/55352
	* trans-decl.c (generate_local_decl): Don't warn for explicitly imported
	but unused module variables which are in a namelist or common block.

2012-11-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/55352
	* gfortran.dg/namelist_76.f90: New.

From-SVN: r193766